src/main/java/io/jungmini/sample/global/error/ErrorCode.java
package io.jungmini.sample.global.error;

public enum ErrorCode {
	E400,
	E401,
	E403,
	E409,
	E500
}
